[package]
name = "dos_esfinges_bot"
version = "0.1.0"
edition = "2021"

[lib]
name = "dos_esfinges_bot"
path = "src/lib.rs"

[[bin]]
name = "dos_esfinges_bot"
path = "src/main.rs"

[[bin]]
name = "diagnose"
path = "src/bin/diagnose.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# CSV processing
csv = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cryptography (for checksums)
sha2 = "0.10"
hex = "0.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Regex
regex = "1.10"

# Random
rand = "0.8"

# Testing
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
